--- a/.env.template
+++ b/.env.template
@@ -14,3 +14,6 @@ PRODUCTS_MICROSERVICE_PORT=3001
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5440/ordersdb?schema=public"
+
+# NATS_SERVERS="nats://localhost:4222 , nats://localhost:4223"
+NATS_SERVERS="nats://localhost:4222"
