--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,20 +1,23 @@
 steps:
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "build",
-        "-t",
-        "southamerica-west1-docker.pkg.dev/tienda-microservices-468821/image-registry/orders-ms",
-        "-f",
-        "dockerfile.prod",
-        "--platform=linux/amd64",
-        ".",
-      ]
-  - name: "gcr.io/cloud-builders/docker"
-    args:
-      [
-        "push",
-        "southamerica-west1-docker.pkg.dev/tienda-microservices-468821/image-registry/orders-ms",
-      ]
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args:
+    - -c
+    - |
+      docker build -t southamerica-west1-docker.pkg.dev/tienda-microservices-468821/image-registry/orders-ms -f dockerfile.prod --platform=linux/amd64 --build-arg ORDERS_DATABASE_URL=$$DATABASE_URL .
+  secretEnv: ['DATABASE_URL']
+
+- name: 'gcr.io/cloud-builders/docker'
+  args:
+    [
+      'push',
+      'southamerica-west1-docker.pkg.dev/tienda-microservices-468821/image-registry/orders-ms',
+    ]
+
+availableSecrets:
+  secretManager:
+  - versionName: projects/884510208612/secrets/orders_database_url
+    env: 'DATABASE_URL'
+
 options:
   logging: CLOUD_LOGGING_ONLY
