--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -18,6 +18,8 @@ FROM node:21-alpine3.19 AS build
 ARG ORDERS_DATABASE_URL
 ENV DATABASE_URL=$ORDERS_DATABASE_URL
 
+RUN echo "database_url" ::: $ORDERS_DATABASE_URL;
+
 WORKDIR /usr/src/app
 
 
